manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techchallenge-api-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          # APIs diretas (sem rewrite)
          - path: /api/Users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /api/Games
            pathType: Prefix
            backend:
              service:
                name: games-service
                port:
                  number: 80
          - path: /api/Payments
            pathType: Prefix
            backend:
              service:
                name: payments-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techchallenge-prefix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          # Paths com prefixo (com rewrite)
          - path: /users/(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
          - path: /games/(.*)
            pathType: Prefix
            backend:
              service:
                name: games-service
                port:
                  number: 80
          - path: /payments/(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-service
                port:
                  number: 80
